--- a/pokemon_app/templates/pokemon/pokemon_card.html
+++ b/pokemon_app/templates/pokemon/pokemon_card.html
@@ -8,12 +8,10 @@
         <div class="px-8">
                 <p class="font-semibold">{{ pokemon.name }}</p><br>
 
-                <p>{{ pokemon.level }} уровня</p><br>
+                <p>{{ pokemon.level }} уровень</p><br>
                 <p>Здоровье: {{ pokemon.hp }}</p><br>
-                <p>Защита: {{ pokemon.ac }}</p><br>
                 <p class="font-semibold">Характеристики:</p><br>
                 <p>Сила {{ pokemon.strength }}</p>
-                <p>Ловкость {{ pokemon.dexterity }}</p>
                 <p>Телосложение {{ pokemon.constitution }}</p>
 
                 <p>Опыт {{ pokemon.experience }}</p><br>
