--- a/pokemon_app/templates/pokemon/home.html
+++ b/pokemon_app/templates/pokemon/home.html
@@ -5,7 +5,7 @@
     <p>Это очень простой сайт где вы можете поймать покемона =)</p><br>
     <p>Каждый покемон может учавствовать в боях на арене. Бои происходят астоматически каждые 24 часа. Результаты можно посмотреть на странице арены.</p><br><br>
 
-    <h1 class="font-medium text-red-600 hover:underline">Зарегистрируйтесь</h1>
+    <a class="font-medium text-red-600 hover:underline" href="{% url 'register' %}" >Зарегистрируйтесь</a>
     <p>если вы здесь первый раз или</p>
     <a class="font-medium text-red-600 hover:underline" href="{% url 'login' %}">
                 Войдите
